Update layout, add favicon, update CNAME

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <div class="footer clearfix">
-  <div class="col-md-6">
-    {{ site.footer_left }}
-  </div>
-  <div class="col-md-6">
-    {{ site.footer_right }}
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        {{ site.footer_left }}
+      </div>
+    </div>
   </div>
 </div>
 
